# jpeg-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/jpeg/: Cargo.toml
crates/jpeg-2000/: Cargo.toml
crates/jpeg-bin/: Cargo.toml
crates/jpeg-bin/src/: cjpeg.rs  djpeg.rs
crates/jpeg-common/: Cargo.toml
crates/jpeg-ls/: Cargo.toml
crates/jpeg-xl/: Cargo.toml
crates/jpeg/benches/: color_convert_bench.rs  fdct_bench.rs  idct_bench.rs
crates/jpeg/src/: component.rs  constants.rs  decoder.rs  encoder.rs  error.rs  huffman.rs  huffman_encode.rs  lib.rs
crates/jpeg/src/color_convert/: avx.rs  avx2.rs  mod.rs  scalar.rs  sse.rs
crates/jpeg/src/dct/: mod.rs  tables.rs
crates/jpeg/src/dct/scalar/: fixed.rs  float.rs  mod.rs
crates/jpeg/src/decoder/: baseline.rs  lossless.rs  mcu.rs  progressive.rs
crates/jpeg/src/encoder/: baseline.rs
crates/jpeg/src/idct/: mod.rs  tables.rs
crates/jpeg/src/idct/avx/: fixed.rs
crates/jpeg/src/idct/avx512/: fixed.rs  float.rs  mod.rs
crates/jpeg/src/idct/neon/: fixed.rs  float.rs  mod.rs
crates/jpeg/src/idct/scalar/: fixed.rs  float.rs
crates/jpeg/src/idct/sse/: fixed.rs  float.rs
crates/jpeg/src/io/: bit_reader.rs  bit_writer.rs  mod.rs
crates/jpeg/src/marker/: mod.rs  read.rs  write.rs
crates/jpeg/tests/: decode_baseline.rs  decode_extended.rs  decode_lossless.rs  decode_progressive.rs  encode_baseline.rs  encode_extended.rs
crates/testutil/: Cargo.toml
testfiles/dicom/: README.md
testfiles/pgm/: jpeg400jfif.pgm  mr1_jply.pgm
testfiles/ppm/: jpeg420.ppm  (+2 more)
(+30 files in other folders)
